--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Our Feline Friends</h1>
+    <h1>That was a big mistake</h1>
     <p>Eventually we will put cat pictures here.</p>
     <hr>
   </body>
